[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/Images/Backgrounds/game_menu_bg.png" type="Texture" id=2]
[ext_resource path="res://Menu/Images/Backgrounds/T_GameMenu_MG.png" type="Texture" id=3]
[ext_resource path="res://Menu/Images/Backgrounds/game_menu_fg.png" type="Texture" id=4]
[ext_resource path="res://Menu/Images/Buttons/T_MenuButton.png" type="Texture" id=5]
[ext_resource path="res://Menu/Images/Buttons/T_MenuButton_clicked.png" type="Texture" id=6]
[ext_resource path="res://Menu/Images/Buttons/T_MenuButton_hover.png" type="Texture" id=7]
[ext_resource path="res://Menu/Fonts/LoveYaLikeASister.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]

resource_local_to_scene = true
size = 65
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Resource", "Settings" ]

[node name="MainMenu" type="Node"]

script = ExtResource( 1 )

[node name="CameraMenu" type="Camera2D" parent="." index="0"]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Background_MainMenu_0" type="Sprite" parent="." index="1"]

z_index = -2
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Z Index" ]

[node name="Background_MainMenu_1" type="Sprite" parent="." index="2"]

z_index = -1
texture = ExtResource( 3 )
_sections_unfolded = [ "Offset", "Z Index" ]

[node name="Background_MainMenu_2" type="Sprite" parent="." index="3"]

z_index = 1
texture = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Z Index" ]

[node name="Control" type="Control" parent="." index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Button_LevelMenu" type="TextureButton" parent="Control" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -260.0
margin_top = -358.0
margin_right = 260.0
margin_bottom = -218.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
_sections_unfolded = [ "Focus", "Hint", "Mouse", "Rect" ]

[node name="Label_LevelMenu" type="Label" parent="Control/Button_LevelMenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 520.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Level Menu"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Button_Score" type="TextureButton" parent="Control" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -260.0
margin_top = -193.0
margin_right = 260.0
margin_bottom = -53.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
_sections_unfolded = [ "Margin", "Rect", "Textures" ]

[node name="Label_Score" type="Label" parent="Control/Button_Score" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 520.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Score"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Button_Quit" type="TextureButton" parent="Control" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -260.0
margin_top = -28.0
margin_right = 260.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Label_Quit" type="Label" parent="Control/Button_Quit" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 520.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Quit"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_colors", "custom_fonts", "custom_styles" ]

[connection signal="pressed" from="Control/Button_LevelMenu" to="." method="_on_Button_LevelMenu_pressed"]

[connection signal="pressed" from="Control/Button_Score" to="." method="_on_Button_Score_pressed"]

[connection signal="pressed" from="Control/Button_Quit" to="." method="_on_Button_Quit_pressed"]


